--- a/core/templates/core/post_chat.html
+++ b/core/templates/core/post_chat.html
@@ -84,7 +84,7 @@
 </div>
 
 <script>
-    const postId = {{ post.pk }};
+    const postId = "{{ post.pk }}";
     const chatContainer = document.getElementById('chat-container');
     const chatForm = document.getElementById('chat-form');
     const messageInput = document.getElementById('message-input');
